--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -2,3 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: 'Monocraft';
+    src: url('/Monocraft%20(1).ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
+  
+  body {
+    font-family: 'Monocraft', monospace;
+  }
+  
